Fix misaligned template options

--- a/src/css/TemplateOption.css
+++ b/src/css/TemplateOption.css
@@ -10,6 +10,10 @@
   margin-right: 5%;
 }
 
+.year {
+  margin-bottom: 1.5rem;
+}
+
 .semester {
   width: 30%;
   max-width: 30%;
